<resources>
    <string name="app_name">flowersOrder</string>
    <string name="telephoneNumber">Номер телефона *</string>
    <string name="number">+7 XXX XXX-XX-XX</string>
    <string name="streetEditText">Город, улица, дом, квартира</string>
    <string name="streetTextView">Адрес доставки *</string>
    <string name="nameEditText">Введите ваше полное имя</string>
    <string name="nameTextView">Имя *</string>
    <string name="deliveryTextView">Данные для доставки</string>
    <string name="dateDeliveryTextView">Дата доставки</string>
    <string name="dateDeliveryEditText">ЧЧ:ММ</string>
    <string name="submitButton">Подтвердить</string>
    <string name="detailOrder">Детали заказа</string>
    <string name="flowerName">Букет:</string>
    <string name="numberFlower">Количество цветов:</string>
    <string name="decorationFlower">Украшение:</string>
    <string name="customer">Контактные данные:</string>
    <string name="delivery">Время доставки:</string>
    <string name="summ">Итоговая стоимость:</string>
    <string name="submitOrder">Подтверждение заказа</string>
    <string name="editOrder">Изменить заказ</string>
    <string name="comment1">Спасибо, что выбрали наш сервис!</string>
    <string name="comment2">Проверьте правильность данных перед отправкой заказа.</string>
</resources>